--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -9,7 +9,8 @@
 
 body {
   color: $text-color;
-  font-family: "Poppins";
+  font-family: "Inter";
+  font-size: 24px;
   background-color: aliceblue;
 }
 
