--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -11,7 +11,7 @@ body {
   color: $text-color;
   font-family: "Inter";
   font-size: 24px;
-  background-color: aliceblue;
+  background-color: $color-background-page;
 }
 
 a {
