--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -3,16 +3,41 @@
 
 .Home {
     .telaToda {
-        display: flex;
-        flex-direction: column;
         height: 100vh;
     }
 
     .apresentacao {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
         height: 100%;
+
+        .tecnologias {
+            margin-top: 50px;
+            // width: 100%;
+
+            ul {
+                list-style: none;
+                flex-wrap: wrap;
+                flex-direction: center;
+                gap: 30px;
+                
+                
+                li {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    gap: 10px;
+                    // @include teste;
+                    width: 80px;
+                    padding: 10px;
+                    border-radius: 8px;
+
+                    font-size: 30px;
+                    background-color: $color-background-bar;
+
+                    span {
+                        font-size: 12px;
+                    }
+                }
+            }
+        }
     }
 }
