--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -26,3 +26,9 @@
   justify-content: center;
   flex: 1;
 }
+
+
+@mixin teste {
+  box-shadow: inset 0 0 0 2px red;
+  background-color: rgba(255, 0, 0, 0.3);
+}
