--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -31,7 +31,7 @@
                     border-radius: 8px;
 
                     font-size: 30px;
-                    background-color: $color-background-bar;
+                    background-color: rgba($color-background-bar, 0.8);
 
                     span {
                         font-size: 12px;
