--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -2,6 +2,14 @@
 @use '../../styles/mixins' as *;
 
 .Home {
+
+    h1 {
+
+     @media (max-width: 600px) {
+        font-size: 36px;
+     }
+     
+    }
     .telaToda {
         height: 100vh;
     }
