feat: trabalhando estilos do Nav e Home

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,9 @@
 $text-color: #e0fbfc;
 
 $color-background-page: #161a1d;
-$color-background-bar: #2b2d42;
+$color-background-bar: #3d5a80;
+// $color-background-bar: #7209b7;
+// $color-background-bar: #3d5a80;
+// $color-background-bar: #2b2d42;
+// $color-background-bar: #8ac926;
+// $color-background-bar: #8ac926;
