--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -6,7 +6,10 @@
     position: fixed;
     top: 0;
     padding: 10px;
-    background-color: rgba($color-background-bar, 0.9);
+    border-bottom: 1px solid rgba($color-background-bar, 0.5);
+    background-color: rgba($color-background-bar, 0.2);
+
+    backdrop-filter: blur(10px);
 
     .box {
         justify-content: space-between;
@@ -21,6 +24,15 @@
             display: flex;
             flex-direction: row;
             gap: 40px;
+        }
+        
+        @media (max-width: 600px) {
+
+            justify-content: center;
+
+            ul {
+                display: none;
+            }
         }
     }
 }
