--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,7 @@
 $text-color: #e0fbfc;
 
 $color-background-page: #161a1d;
+// $color-background-page: #161d1d;
 $color-background-bar: #3d5a80;
 // $color-background-bar: #7209b7;
 // $color-background-bar: #3d5a80;
