--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -2,7 +2,10 @@
 @use '../../styles/mixins' as *;
 
 .Footer {
-    height: 200px;
-    font-size: 40px;
-    background-color: #333;
+    // min-height: 200px;
+    padding: 20px;
+    border-top: solid 2px #333;
+    font-size: 16px;
+    font-weight: 300;
+    background-color: #222;
 }
